--- a/data_bags/applications/pipline_rails_app.json
+++ b/data_bags/applications/pipline_rails_app.json
@@ -1,7 +1,7 @@
 {
   "id": "pipeline_rails_app",
   "repo_url": "https://github.com/stephenlauck/pipeline_rails_app",
-  "clone_url": "git@github.com:stephenlauck/pipeline_rails_app.git",
+  "clone_url": "https://github.com/stephenlauck/pipeline_rails_app.git",
   "test_command": "rake -T",
   "knife_search_string": "recipe:*pipeline_rails_app*",
   "branch": "*/master"
